# spidev-lib

./: CMakeLists.txt  README.md
sample/: spidev-testc.c  spidev-testcpp.cc
src/: spidev_lib++.cc  spidev_lib++.h  spidev_lib.c  spidev_lib.h
